custom exceptions, global exception handler, user service, and controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
+#jwt secret
 jwt.secret=3F@a$T7uLp@9x!zQk3vW0nBdMfE2sYZH
-jwt.expiration=86400000  # 24 hours in milliseconds
+
+# 24 hours in milliseconds
+jwt.expiration=86400000  
 
